--- a/demo/peacock/src/components/cart/line-item.css
+++ b/demo/peacock/src/components/cart/line-item.css
@@ -6,19 +6,27 @@
   position: relative;
   height: 90px;
   padding-top: 15px;
+  padding-bottom: 10px;
   display: flex;
   border-bottom: 1px solid var(--border-color);
 }
 
 .image {
-  width: 63px;
-  height: 63px;
+  width: 50px;
+  height: 48px;
   margin-right: 5px;
   flex-shrink: 0;
+  & img {
+    width: 50px;
+    height: 48px;
+  }
 }
 
 .container {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .top {
@@ -48,7 +56,6 @@
 }
 
 .details {
-  margin-top: 13px;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -71,6 +78,12 @@
   font-weight: 900;
 }
 
+@media (--large), (--medium) {
+  .box {
+    padding-bottom: 5px;
+  }
+}
+
 @media (--small-only) {
   .product-name {
     font-size: 14px;
@@ -87,9 +100,5 @@
 
   .delete {
     margin-right: -5px;
-  }
-
-  .details {
-    margin-top: 18px;
   }
 }
